2011-01-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/ThreadFactory.h: Remove thread starters.
	* src/network/ThreadFactory.cpp: Likewise.

	* src/network/Makefile.am: Update libthreads with new cpp files.

	* include/network/Makefile.am (noinst_HEADERS): Add new header files.

	* include/network/JoinThread.h: New file.
	* include/network/NeighborInputThread.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/RelSatSolverThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/NeighborInputThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/RelSatSolverThread.cpp: Likewise.

2011-01-11  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/generator/ContextGenerator.cpp: Add support for DMCS_LOG_*.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/mcs/BeliefState.h: Fix argument-dependent name lookup.

2011-01-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/generator/dynGen.cpp: Setup srand() with gettimeofday().

	* src/dmcs/OptDMCS.cpp: Remove X-Mas leftover casserole.

	* include/network/Client.tcc: Add support for DMCS_LOG_*.
	* include/network/Handler.tcc: Likewise.
	* src/network/Server.cpp: Likewise.
	* include/network/AsynClient.tcc: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/generator/staticGen.cpp: Likewise.
	* include/dmcs/ProgramOptions.h: Likewise.
	* src/generator/Makefile.am: Likewise.

	* include/dmcs/Log.h: Add support for configuring the logger from
	a config file.
	* src/dmcs/Log.cpp: Likewise.

	* configure.ac: Add --enable-stats for defining DMCS_STATS_INFO.

2011-01-10  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Send 0 instead of *bs = 0.

	* src/network/ThreadFactory.cpp: Check the outcome of result from
	MQ.

	* include/network/ThreadFactory.h: Let client be a member, again,
	for keeping information.

	* include/network/Server.h: Remove &. Fix losing information.
